--- a/Joinnow.html
+++ b/Joinnow.html
@@ -14,7 +14,7 @@
         <nav>
             
             <ul class="nav_links">
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Discord.html">Discord</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="staff.html">Staff list</a></li>
