--- a/reglement.html
+++ b/reglement.html
@@ -25,7 +25,7 @@
                         <ul class="nav_links">
                             
                             <li><a href="index.html">Home</a></li>
-                            <a class="cta" href="Discord.html"><button>Discord</button></a>
+                            <li><a  href="Discord.html"><button>Discord</button></a>
                             
                             <li><a href="staff.html">Staff list</a></li>
                             <li><a href="Joinnow.html">Join Now</a></li>
