--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,7 @@
                     <li><a href="Discord.html">Discord</a></li>
                     <li><a href="shop.html"><button>Shop</button></a></li>
                     <li><a href="staff.html">Staff list</a></li>
-                    <a class="cta" href="Joinnow.html">Join Now</a>
+                    <li><a  href="Joinnow.html">Join Now</a>
                 </ul>
             </nav>
         
