--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav>
                 
                 <ul class="nav_links">
-                    <a class="cta" href="index.html"><button>Home</button></a></li>
+                    <li><a href="index.html"><button>Home</button></a></li>
                     <li><a href="Discord.html">Discord</a></li>
                     
                     <li><a href="staff.html">Staff list</a></li>
