--- a/staff.html
+++ b/staff.html
@@ -15,10 +15,10 @@
             <nav>
                 
                 <ul class="nav_links">
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Discord.html">Discord</a></li>
                     <li><a href="staff.html"><button>Staff list</button></a></li>
-                    <li><a class="cta" href="Joinnow.html">Join Now</a></li>
+                    <li><a  href="Joinnow.html">Join Now</a></li>
                 </ul>
             </nav>  
         </header>
